# demofml

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  image.yml
configs/: README.md
configs/datasets/: cleaned-ticks-development-v1.toml
configs/experiments/: baseline-ridge-v1.toml  development-acceptance-v1.toml  development-pipeline-v1.toml  development-pipeline-v2.toml  executable-labels-v1.toml  locked-test-evaluation-v1.toml  portfolio-v1.toml  purged-walk-forward-v1.toml
configs/features/: causal-v1.toml
infra/: README.md
infra/k8s/: README.md  create-secrets.sh  deploy-ingress.sh  deploy.sh  run-smoke.sh
infra/k8s/base/: kustomization.yaml  minio-bootstrap.yaml  minio.yaml  mlflow.yaml  postgres.yaml  runtime-config.yaml  service-account.yaml
infra/k8s/jobs/: development-pipeline-pvc.yaml  development-pipeline-v2.yaml  development-pipeline.yaml  infrastructure-smoke.yaml
scripts/: audit_ticks.py  build_features.py  build_labels.py  build_quote_bars.py  build_validation_splits.py  evaluate_development_acceptance.py  publish_dataset.py  run_baseline_experiment.py  run_development_pipeline.py  run_portfolio_evaluation.py  split_parquet_dataset.py
src/demofml/: __init__.py  __main__.py  cli.py  infrastructure.py
src/demofml/bars/: __init__.py  build.py  quotes.py
src/demofml/data/: __init__.py  audit.py  progress.py  publisher.py  remote.py  splitter.py  ticks.py
src/demofml/evaluation/: __init__.py  portfolio.py  (+1 more)
tests/fixtures/: README.md
tests/unit/: test_baseline_experiment.py  test_causal_features.py  test_data_publisher.py  test_data_splitter.py  test_development_pipeline.py  test_executable_labels.py  test_frozen_models.py  test_infrastructure.py  test_locked_test_pipeline.py  test_package.py  test_portfolio_evaluation.py  test_quote_bars.py  test_remote_data.py  test_research_configs.py  test_temporal_validation.py  test_ticks.py
(+21 files in other folders)
