[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "demofml"
version = "0.1.0"
description = "Machine-learning research engine for cost-aware Forex trading signals"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
  "boto3==1.43.51",
  "mlflow-skinny==3.14.0",
  "pyarrow==25.0.0",
]

[project.scripts]
demofml = "demofml.cli:main"

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.13,<8",
  "mypy>=1.15,<2",
  "pytest>=8,<10",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/demofml"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.coverage.run]
branch = true
source = ["demofml"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
